--- a/build.gradle
+++ b/build.gradle
@@ -34,9 +34,9 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.google.code.gson:gson:2.8.1'
+//    compile 'com.android.support:appcompat-v7:25.3.1'
+//    compile 'com.android.support:design:25.3.1'
+//    compile 'com.google.code.gson:gson:2.8.1'
 //    compile rootProject.ext.dependencies.appcompatV7
 //    compile rootProject.ext.dependencies.design
 //    compile rootProject.ext.dependencies.gson
