--- a/build.gradle
+++ b/build.gradle
@@ -1,43 +1,24 @@
-apply plugin: 'com.android.library'
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-android {
-//    compileSdkVersion rootProject.ext.android.compileSdkVersion
-//    buildToolsVersion rootProject.ext.android.buildToolsVersion
-//
-//    defaultConfig {
-//        minSdkVersion rootProject.ext.android.minSdkVersion
-//        targetSdkVersion rootProject.ext.android.targetSdkVersion
-//        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-//    }
-    compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.3.2'
 
-    defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 25
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-    //dataBinding
-    dataBinding {
-        enabled = true
-    }
-    productFlavors {
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
 
-dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-//    compile 'com.android.support:appcompat-v7:25.3.1'
-//    compile 'com.android.support:design:25.3.1'
-//    compile 'com.google.code.gson:gson:2.8.1'
-//    compile rootProject.ext.dependencies.appcompatV7
-//    compile rootProject.ext.dependencies.design
-//    compile rootProject.ext.dependencies.gson
+allprojects {
+    repositories {
+        jcenter()
+        maven { url 'https://jitpack.io' }
+    }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
