--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 apply plugin: 'com.android.library'
 
+group = 'com.github.merlinal'
+
 buildscript {
     repositories {
         jcenter()
@@ -49,9 +51,5 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-//    compile 'com.android.support:appcompat-v7:25.3.1'
-//    compile 'com.android.support:design:25.3.1'
-//    compile 'com.google.code.gson:gson:2.8.1'
+    provided 'com.google.code.gson:gson:2.8.1'
 }
